--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PetzTest</string>
+    <string name="loading">Carregando</string>
+    <string name="cards_toolbar_title">Hearthstone Cards</string>
+    <string name="card_details_toolbar_title">Card Details</string>
 </resources>
